@@ -36,7 +36,7 @@ public class DNAExtractorBlockEntity extends MachineBaseBlockEntity {
     protected boolean canProcess(int process) {
         ItemStack extraction = this.slots.get(0);
         ItemStack storage = this.slots.get(1);
-        if (storage.getItem() == ItemHandler.STORAGE_DISC && (extraction.getItem() == ItemHandler.AMBER || extraction.getItem() == ItemHandler.SEA_LAMPREY || extraction.getItem() == ItemHandler.DINOSAUR_MEAT) && (storage.getTagCompound() == null || !storage.getTagCompound().hasKey("Genetics"))) {
+        if (storage.getItem() == ItemHandler.STORAGE_DISC && (extraction.getItem() == ItemHandler.AMBER || extraction.getItem() == ItemHandler.SEA_LAMPREY || (extraction.getItem() == ItemHandler.DINOSAUR_MEAT && extraction.hasTagCompound())) && (storage.getTagCompound() == null || !storage.getTagCompound().hasKey("Genetics"))) {
             for (int i = 2; i < 6; i++) {
                 if (this.slots.get(i).isEmpty()) {
                     return true;
